--- a/scss/_goods.scss
+++ b/scss/_goods.scss
@@ -193,6 +193,7 @@ $borderR-img: 5px;
         font-size: 2em;
         text-align: center;
         margin: 5% 0;
+        color: $color-B;
         line-height: 120%;
 
         span {
@@ -219,7 +220,9 @@ $borderR-img: 5px;
             font-family: $font-Tks;
             text-align: center;
             font-size: 1em;
+            line-height: 200%;
             color: $color-B;
+            font-weight: bold;
         }
 
         .product {
