--- a/scss/_ability.scss
+++ b/scss/_ability.scss
@@ -15,7 +15,7 @@ $borderR-img: 5px;
 
     .ability-top-heading {
         width: 50%;
-        height: 40%;
+        height: 50%;
         background-color: $color-W;
         opacity: 70%;
         border-radius: 10px;
@@ -92,6 +92,7 @@ $borderR-img: 5px;
             width: 20%;
             height: 100%;
             background-color: $color-EG;
+            border-radius: $borderR-img;
 
             h2 {
                 font-family: $font-Tks;
