--- a/scss/_child.scss
+++ b/scss/_child.scss
@@ -259,6 +259,45 @@ $borderR-img: 5px;
         }
     }
 
+    // .desc-background {
+    //     position: absolute;
+    //     width: 100%;
+    //     height: 100%;
+    //     z-index: 1;
+
+    //     .desc-background1 {
+    //         width: 10%;
+    //         height: auto;
+    //         animation-name: desc-background1;
+    //         animation-duration: 10s;
+    //         animation-iteration-count: infinite;
+    //     }
+
+    //     @keyframes  desc-background1{
+    //         from {
+    //             transform: translate(100px 100px);
+    //         }
+    //         to {
+    //             transform: translate(0px 0px);
+    //         }
+    //     }
+
+    //     .desc-background2 {
+    //         width: 10%;
+    //         height: auto;
+    //     }
+
+    //     .desc-background3 {
+    //         width: 10%;
+    //         height: auto;
+    //     }
+
+    //     .desc-background4 {
+    //         width: 10%;
+    //         height: auto;
+    //     }
+    // }
+
     .more {
         width: 100vw;
         height: 180vh;
@@ -282,6 +321,11 @@ $borderR-img: 5px;
                 height: 100%;
                 position: relative;
 
+                img {
+                    width: 40%;
+                    height: auto;
+                }
+
                 p {
                     font-family: $font-Tks;
                     font-weight: bold;
@@ -293,36 +337,58 @@ $borderR-img: 5px;
                     position: absolute;
                     top: -10%;
                     left: 10%;
+                    display: flex;
+                    align-items: center;
                 }
 
                 .more-p2 {
                     position: absolute;
                     top: 30%;
-                    left: 60%;
+                    left: 35%;
+                    display: flex;
+                    align-items: center;
                 }
 
                 .more-p3 {
                     position: absolute;
                     top: 80%;
                     left: 20%;
+                    display: flex;
+                    align-items: center;
                 }
 
                 .more-p4 {
                     position: absolute;
                     top: -10%;
                     left: -30%;
+                    display: flex;
+                    align-items: center;
+
+                    img {
+                        width: 20%;
+                        height: auto;
+                    }
                 }
 
                 .more-p5 {
                     position: absolute;
                     top: 30%;
-                    left: 40%;
+                    left: 10%;
+                    display: flex;
+                    align-items: center;
                 }
 
                 .more-p6 {
                     position: absolute;
                     top: 80%;
                     left: 0%;
+                    display: flex;
+                    align-items: center;
+
+                    img {
+                        width: 20%;
+                        height: auto;
+                    }
                 }
             }
         }
@@ -582,7 +648,7 @@ $borderR-img: 5px;
                     .more-p2 {
                         font-size: 1.5em;
                         position: absolute;
-                        top: 20%;
+                        top: 25%;
                         right: -20%;
                     }
     
@@ -600,8 +666,9 @@ $borderR-img: 5px;
     
                     .more-p5 {
                         position: absolute;
-                        top: 30%;
-                        left: 40%;
+                        top: 35%;
+                        left: 30%;
+                        font-size: 1.5em;
                     }
     
                     .more-p6 {
