--- a/scss/_goods.scss
+++ b/scss/_goods.scss
@@ -15,7 +15,7 @@ $borderR-img: 5px;
 
     .goods-top-heading {
         width: 50%;
-        height: 40%;
+        height: 50%;
         background-color: $color-W;
         opacity: 70%;
         border-radius: 10px;
@@ -24,6 +24,7 @@ $borderR-img: 5px;
         h1 {
             font-family: $font-Tks;
             font-size: 3em;
+            margin-bottom: -10%;
         }
 
         h2 {
