--- a/scss/_child.scss
+++ b/scss/_child.scss
@@ -26,18 +26,18 @@ $borderR-img: 5px;
 
             .top-text-first {
                 font-family: $font-Tks;
-                font-size: 2.3em;
+                font-size: 5rem;
                 color: $color-W;
                 font-weight: bold;
                 position: absolute;
-                top: 20%;
-                left: 25%;
+                top: 15%;
+                left: 23%;
                 transform: rotate(-10deg);
             }
 
             .top-text-second {
                 font-family: $font-Tks;
-                font-size: 2.3em;
+                font-size: 5rem;
                 color: $color-W;
                 font-weight: bold;
                 position: absolute;
@@ -56,12 +56,12 @@ $borderR-img: 5px;
 
             .top-text-third {
                 font-family: $font-Tks;
-                font-size: 4em;
+                font-size: 8rem;
                 color: $color-W;
                 font-weight: bold;
                 position: absolute;
                 top: 40%;
-                left: 25%;
+                left: 23%;
             }
         }
 
@@ -259,44 +259,72 @@ $borderR-img: 5px;
         }
     }
 
-    // .desc-background {
-    //     position: absolute;
-    //     width: 100%;
-    //     height: 100%;
-    //     z-index: 1;
+    .desc-background {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        z-index: 1;
 
-    //     .desc-background1 {
-    //         width: 10%;
-    //         height: auto;
-    //         animation-name: desc-background1;
-    //         animation-duration: 10s;
-    //         animation-iteration-count: infinite;
-    //     }
+        .desc-background1 {
+            width: 10%;
+            height: auto;
+            animation: desc-background1 50s infinite;
+        }
 
-    //     @keyframes  desc-background1{
-    //         from {
-    //             transform: translate(100px 100px);
-    //         }
-    //         to {
-    //             transform: translate(0px 0px);
-    //         }
-    //     }
+        @keyframes desc-background1{
+            0% {
+                transform: translate(100vw, 0vh);
+            }
+            100% {
+                transform: translate(0vw, 120vh);
+            }
+        }
 
-    //     .desc-background2 {
-    //         width: 10%;
-    //         height: auto;
-    //     }
+        .desc-background2 {
+            width: 10%;
+            height: auto;
+            animation: desc-background2 50s infinite;
+        }
 
-    //     .desc-background3 {
-    //         width: 10%;
-    //         height: auto;
-    //     }
+        @keyframes desc-background1{
+            0% {
+                transform: translate(100vw, 0vh);
+            }
+            100% {
+                transform: translate(0vw, 120vh);
+            }
+        }
 
-    //     .desc-background4 {
-    //         width: 10%;
-    //         height: auto;
-    //     }
-    // }
+        .desc-background3 {
+            width: 10%;
+            height: auto;
+            animation: desc-background3 50s infinite;
+        }
+
+        @keyframes desc-background3{
+            0% {
+                transform: translate(90vw, -10vh);
+            }
+            100% {
+                transform: translate(0vw, 120vh);
+            }
+        }
+
+        .desc-background4 {
+            width: 10%;
+            height: auto;
+            animation: desc-background4 50s infinite;
+        }
+
+        @keyframes desc-background4{
+            0% {
+                transform: translate(100vw, 0vh);
+            }
+            100% {
+                transform: translate(0vw, 120vh);
+            }
+        }
+    }
 
     .more {
         width: 100vw;
