--- a/scss/_goods.scss
+++ b/scss/_goods.scss
@@ -5,6 +5,10 @@ $color-W: #fdfdfd;
 $color-B: #4B4237;
 $borderR-img: 5px;
 
+html {
+    font-size: 62.5%;
+}
+
 #goods-top {
     width: 100vw;
     height: 50vh;
@@ -19,16 +23,20 @@ $borderR-img: 5px;
         background-color: $color-W;
         opacity: 70%;
         border-radius: 10px;
-        text-align: center;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
 
         h1 {
             font-family: $font-Tks;
-            font-size: 3em;
-            margin-bottom: -10%;
+            font-size: 6rem;
+            // margin-bottom: -8%;
         }
 
         h2 {
             font-family: $font-Tks;
+            font-size: 3rem;
         }
     }
 }
@@ -157,7 +165,7 @@ $borderR-img: 5px;
 
     h2 {
         font-family: $font-Tks;
-        font-size: 1.5em;
+        font-size: 2.5rem;
         color: $color-B;
         text-align: center;
         margin: 3%;
@@ -166,7 +174,7 @@ $borderR-img: 5px;
 
 .item-title {
     font-family: $font-Tks;
-    font-size: 3em;
+    font-size: 5rem;
     color: $color-W;
     margin-left: 12%;
     margin-bottom: 8%;
@@ -175,25 +183,27 @@ $borderR-img: 5px;
 
 .goods-info {
     width: 45vw;
-    height: 115vh;
+    height: 90vh;
     padding-bottom: 3%;
     background-color: $color-W;
-    position: absolute;
-    top: 10%;
+    position: fixed;
+    top: 5%;
     left: 0;
     right: 0;
     margin: 0 auto;
     display: flex;
     align-items: center;
     flex-direction: column;
+    justify-content: space-between;
     opacity: 0;
-	visibility: hidden;
+    visibility: hidden;
+
 
     h3 {
         font-family: $font-Tks;
-        font-size: 2em;
+        font-size: 4rem;
         text-align: center;
-        margin: 5% 0;
+        margin: 5% 0 2% 0;
         color: $color-B;
         line-height: 120%;
 
@@ -204,7 +214,7 @@ $borderR-img: 5px;
 
     .goods-info-main {
         width: 90%;
-        height: 80%;
+        height: 90%;
         background-color: #A5EF83;
         padding: 5% 0;
         display: flex;
@@ -214,13 +224,13 @@ $borderR-img: 5px;
 
         img {
             width: 90%;
-            height: auto;
+            height: 50%;
         }
 
         p {
             font-family: $font-Tks;
             text-align: center;
-            font-size: 1em;
+            font-size: 1.5rem;
             line-height: 200%;
             color: $color-B;
             font-weight: bold;
@@ -228,7 +238,7 @@ $borderR-img: 5px;
 
         .product {
             width: 90%;
-            height: 30%;
+            height: 25%;
             background-color: $color-W;
             display: flex;
             justify-content: center;
@@ -240,7 +250,7 @@ $borderR-img: 5px;
                 h4 {
                     font-family: $font-Tks;
                     color: $color-W;
-                    font-size: 1em;
+                    font-size: 1.5rem;
                     color: $color-B;
                     line-height: 120%;
                     margin: 10% 0 8% 0;
@@ -266,8 +276,8 @@ $borderR-img: 5px;
                 height: 100%;
                 display: flex;
                 flex-direction: column;
-            justify-content: center;
-            align-items: center;
+                justify-content: center;
+                align-items: center;
 
                 img {
                     width: 45%;
@@ -304,7 +314,7 @@ $borderR-img: 5px;
     top: -4%;
     right: -6%;
     width: 11%;
-    height: 8%;
+    height: 10%;
     background-color: #F0D150;
     border-radius: 50%;
 }
@@ -323,7 +333,7 @@ $borderR-img: 5px;
 @media screen and (max-width:600px) {
     #goods-top {
         height: 30vh;
-    
+
         .goods-top-heading {
             width: 67%;
             height: 48%;
@@ -331,12 +341,12 @@ $borderR-img: 5px;
             flex-direction: column;
             align-items: center;
             justify-content: center;
-    
+
             h1 {
                 font-size: 2em;
                 margin-bottom: -5%;
             }
-    
+
             h2 {
                 font-size: 0.8em;
             }
@@ -345,7 +355,7 @@ $borderR-img: 5px;
 
     #goods-main {
         height: 485vh;
-    
+
         .goods-main-game {
             width: 100%;
             height: 21%;
@@ -363,19 +373,19 @@ $borderR-img: 5px;
                 align-items: center;
                 justify-content: space-between;
             }
-        
+
             .item {
                 width: 100%;
                 height: 29%;
                 background-color: $color-W;
                 text-align: center;
-            
+
                 img {
                     width: 85%;
                     height: 60%;
                     margin-top: 5%;
                 }
-            
+
                 h2 {
                     font-family: $font-Tks;
                     font-size: 1em;
@@ -385,11 +395,11 @@ $borderR-img: 5px;
                 }
             }
         }
-    
+
         .goods-main-game::before {
             border-width: 20px 100vw 0 0;
         }
-    
+
         .goods-main-robot {
             width: 100%;
             height: 23%;
@@ -407,19 +417,19 @@ $borderR-img: 5px;
                 align-items: center;
                 justify-content: space-between;
             }
-        
+
             .item {
                 width: 100%;
                 height: 29%;
                 background-color: $color-W;
                 text-align: center;
-            
+
                 img {
                     width: 85%;
                     height: 60%;
                     margin-top: 5%;
                 }
-            
+
                 h2 {
                     font-family: $font-Tks;
                     font-size: 1em;
@@ -429,11 +439,11 @@ $borderR-img: 5px;
                 }
             }
         }
-    
+
         .goods-main-robot::before {
             border-width: 20px 100vw 0 0;
         }
-    
+
         .goods-main-analog {
             width: 100%;
             height: 23%;
@@ -451,19 +461,19 @@ $borderR-img: 5px;
                 align-items: center;
                 justify-content: space-between;
             }
-        
+
             .item {
                 width: 100%;
                 height: 29%;
                 background-color: $color-W;
                 text-align: center;
-            
+
                 img {
                     width: 85%;
                     height: 60%;
                     margin-top: 5%;
                 }
-            
+
                 h2 {
                     font-family: $font-Tks;
                     font-size: 1em;
@@ -473,11 +483,11 @@ $borderR-img: 5px;
                 }
             }
         }
-    
+
         .goods-main-analog::before {
             border-width: 20px 100vw 0 0;
         }
-    
+
         .goods-main-thinking {
             width: 100%;
             height: 16.5%;
@@ -495,19 +505,19 @@ $borderR-img: 5px;
                 align-items: center;
                 justify-content: space-between;
             }
-        
+
             .item {
                 width: 100%;
                 height: 45.5%;
                 text-align: center;
-                
-            
+
+
                 img {
                     width: 85%;
                     height: 60%;
                     margin-top: 5%;
                 }
-            
+
                 h2 {
                     font-size: 1em;
                     text-align: center;
@@ -515,11 +525,11 @@ $borderR-img: 5px;
                 }
             }
         }
-    
+
         .goods-main-thinking::before {
             border-width: 20px 100vw 0 0;
         }
-    
+
         .goods-main-tv {
             width: 100%;
             height: 16.5%;
@@ -537,18 +547,18 @@ $borderR-img: 5px;
                 align-items: center;
                 justify-content: space-between;
             }
-        
+
             .item {
                 width: 100%;
                 height: 45.5%;
                 text-align: center;
-            
+
                 img {
                     width: 85%;
                     height: 60%;
                     margin-top: 5%;
                 }
-            
+
                 h2 {
                     font-size: 1em;
                     text-align: center;
@@ -556,7 +566,7 @@ $borderR-img: 5px;
                 }
             }
         }
-    
+
         .goods-main-tv::before {
             border-width: 20px 100vw 0 0;
         }
@@ -573,26 +583,27 @@ $borderR-img: 5px;
     .parent-footer {
         width: 100vw;
         height: 64vh;
-    
+
         .parent-footer-1 {
             width: 100%;
             height: 90%;
             padding: 5% 0;
             justify-content: space-between;
-    
+
             img {
                 width: 30%;
                 height: auto;
             }
-    
+
             .footer-btn-1 {
                 width: 74%;
                 height: 60%;
                 display: flex;
                 align-items: center;
-                flex-direction: column;;
+                flex-direction: column;
+                ;
                 justify-content: space-around;
-    
+
                 .footer-btn-ability {
                     width: 100%;
                     height: 45%;
@@ -603,12 +614,12 @@ $borderR-img: 5px;
                     align-items: center;
                     justify-content: center;
                     flex-direction: column;
-    
+
                     .footer-ability-img {
                         width: 100%;
                         height: 50%;
                         position: relative;
-    
+
                         .footer-ability-img-1 {
                             width: 25%;
                             height: auto;
@@ -616,7 +627,7 @@ $borderR-img: 5px;
                             top: -60%;
                             left: 25%;
                         }
-    
+
                         .footer-ability-img-2 {
                             width: 30%;
                             height: auto;
@@ -625,7 +636,7 @@ $borderR-img: 5px;
                             right: 25%;
                         }
                     }
-    
+
                     a {
                         font-family: $font-Tks;
                         font-weight: bold;
@@ -634,7 +645,7 @@ $borderR-img: 5px;
                         color: $color-B;
                     }
                 }
-    
+
                 .footer-btn-goods {
                     width: 100%;
                     height: 45%;
@@ -644,41 +655,41 @@ $borderR-img: 5px;
                     align-items: center;
                     justify-content: center;
                     flex-direction: column;
-    
+
                     .footer-goods-img {
                         width: 100%;
                         height: 50%;
                         position: relative;
-    
+
                         .footer-goods-img-1 {
                             width: 40%;
                             top: -60%;
                             left: 30%;
                         }
-    
+
                         .footer-goods-img-2 {
                             width: 30%;
                             top: 5%;
                             left: 5%;
                         }
-    
+
                         .footer-goods-img-3 {
                             width: 30%;
                             top: 10%;
                             right: 3%;
                         }
                     }
-    
+
                     a {
                         font-size: 1em;
                     }
                 }
             }
-    
+
             .footer-btn-2 {
                 width: 74%;
                 height: 11%;
-    
+
                 .footer-btn-child {
                     width: 100%;
                     height: 100%;
@@ -687,14 +698,14 @@ $borderR-img: 5px;
                     display: flex;
                     align-items: center;
                     justify-content: center;
-    
+
                     a {
                         font-size: 1em;
                     }
                 }
             }
         }
-    
+
         .parent-footer-2 {
             width: 100vw;
             height: 10%;
