--- a/scss/_parent.scss
+++ b/scss/_parent.scss
@@ -614,7 +614,7 @@ body {
     top: 0;
     right: -100%;
     width: 30vw;
-    height: 156vh;
+    height: 100vh;
     background-color: $color-G;
     transition: all 0.6s;
     overflow: auto;
@@ -622,7 +622,7 @@ body {
 
     ul {
         width: 100%;
-        height: 100%;
+        height: 80%;
         display: flex;
         align-items: center;
         justify-content: center;
@@ -640,14 +640,36 @@ body {
             a {
                 font-family: $font-Tks;
                 color: $color-W;
-                font-size: 1.8em;
+                font-size: 2.5rem;
                 font-weight: bold;
                 text-decoration: none;
+                line-height: 180%;
             }
 
             span {
-                font-size: 0.8em;
+                font-size: 2rem;
             }
+
+            .parent-menu-close {
+                width: 50px;
+                height: 50px;
+                background-color: #F7A514;
+                border-radius: $borderR-img;
+                margin: 0 auto;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+
+                p {
+                    font-family: $font-Tks;
+                    color: $color-W;
+                    font-size: 4rem;
+                }
+            }
+        }
+
+        li:last-child {
+            border: none;
         }
     }
 
@@ -682,7 +704,7 @@ body {
     p {
         font-family: $font-Tks;
         color: $color-W;
-        font-size: 1em;
+        font-size: 1.5rem;
         margin-bottom: 10%;
     }
 }
